--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ header .menu ul li a{
     color: #fdfdfd;
 }
 
+header .menu ul li a:hover {
+    color: #fdfdfd84;
+}
+
 main section.banner{
     height: 600px;
     background-color: cadetblue;
@@ -95,6 +99,7 @@ main section.receitas-principais h2 {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    border-radius: 5px;
 }
 
 .lista-receitas article h3 {
@@ -108,6 +113,13 @@ main section.receitas-principais h2 {
     font-size: 24px;
     font-weight: bold;
     padding: 5px 25px;
+    border-radius: 5px;
+}
+
+.lista-receitas article a:hover {
+    transition: 0.2s;
+    background-color: #0f4a01;
+    padding: 7px 27px;
 }
 
 section.banner-secundario {
@@ -135,6 +147,7 @@ section.banner-secundario .container h2 {
 section.banner-secundario .container p {
     color: #fff;
     font-size: 24px;
+    margin-top: 0;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     width: 450px;
     max-width: 100%;
@@ -195,7 +208,7 @@ main section.risoto-abobora h2 {
     width: 600px;
     max-width: 100%;
     text-align: justify;
-    margin-bottom: 30px;
+    margin: 50px 0;
 }
 
 .preparo p {
@@ -287,6 +300,45 @@ section.contato .container {
     border-radius: 30px;
 }
 
+.formulario form button:hover {
+    transition: 0.2s;
+    background-color: #147411;
+    color: #ffffffdd;
+    padding: 6px 16px;
+    border-color: #147411;;
+}
+
+.receita-interna {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+}
+
+aside h4 {
+    color: #ffa000;
+    font-family: 'Montserrat' sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.receita-relacionada {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.receita-relacionada h5 {
+    text-align: center;
+    font-size: 16px;
+    padding: 16px;
+    margin: 0;
+    margin-bottom: 50px;
+}
+
+.img-aside {
+    width: 245px;
+    height: 242px;
+    margin: 0;
+}
+
 @media (max-width: 1100px) {
     .container, 
     .receita-interna {
@@ -321,6 +373,12 @@ section.contato .container {
         .lista-receitas article {
             padding: 10px;
         }
+
+        footer .container { 
+            display: flex;
+            flex-wrap: wrap; 
+            justify-content: center;
+        }
 }
 
 @media (max-width: 700px) {
@@ -343,6 +401,10 @@ section.contato .container {
 
     main section.todas-receitas h2 {
         text-align: center;
+    }
+
+    .receita-interna main { 
+        max-width: 100%; 
     }
 
     main section.risoto-abobora h2 {
@@ -369,4 +431,5 @@ section.contato .container {
         width: 100%;
         margin: 25px 0;
     }
+
 }
